--- a/index.html
+++ b/index.html
@@ -22,112 +22,58 @@
 	    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
 	    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
     </head>
-<body data-spy="scroll" data-target="#myScrollspy" data-offset="1">
-
-<div class="container">
-  <div class="row">
-  	<div class="col-md-3">
-  		<div class="row">
-	  		<nav class="col-sm-3 col-4" id="myScrollspy">
-		      <ul class="nav nav-pills flex-column">
-		        <li class="nav-item">
-		          <a class="nav-link active" href="#section1">EDUCATION</a>
-		        </li>
-		        <li class="nav-item">
-		          <a class="nav-link" href="#section2">SANTE</a>
-		        </li>
-		        <li class="nav-item">
-		          <a class="nav-link" href="#section3">PROTECTION</a>
-		        </li>
-		        <li class="nav-item">
-		          <a class="nav-link" href="#section4">MOYENS D'EXISTENCE</a>
-		        </li>
-		      </ul>
-		    </nav>
-  		</div>
-  		<div class="row keyfigures">
-  			<div class="col-sm-12">
-  				<h4>1234567</h4>
-				<h6>Nombre d'enfants enrollés dans le système de parrainage</h6>
-  			</div>
-  			<div class="col-sm-12">
-  				<h4>1234567</h4>
-				<h6>Nombre de participants atteints par les activités</h6>
-  			</div>
-  			<div class="col-sm-12">
-  				<h4>1234567</h4>
-				<h6>Nombre de régions d'intervention</h6>
-  			</div>
-  			<div class="col-sm-12">
-  				<h4>1234567</h4>
-				<h6>Nombre de départements d'intervention</h6>
-  			</div>
-  			<div class="col-sm-12">
-  				<h4>1234567</h4>
-				<h6>Nombre de communes d'intervention</h6>
-  			</div>
-  		</div>
-    </div>
-    <div class="col-md-9 col-8">
-      <div id="section1" >
-        <h1>EDUCATION</h1>
-        <p>Lorem ipsum est aliqua duis aliqua ut sint incididunt duis aliqua reprehenderit laborum sunt est.</p>
-        <img src="cfs.png" alt="">
-        <div class="desc">Incididunt minim adipisicing cillum deserunt in consectetur dolore duis enim proident incididunt tempor occaecat nulla dolor culpa ut culpa non ea ut et id dolor ut in aliqua voluptate aliqua id voluptate non elit pariatur elit ex cupidatat cupidatat sint cillum ullamco labore deserunt dolor eiusmod non cupidatat in proident ullamco sit proident culpa sunt non fugiat quis ut laboris aliqua incididunt ad in nulla aliquip laboris cupidatat eu dolor ut adipisicing nulla exercitation exercitation ullamco culpa consectetur ex sunt consectetur ea occaecat magna duis dolor aliquip cillum consequat minim in tempor in ullamco esse sint sint sint eiusmod velit sint qui culpa dolor in enim magna in fugiat fugiat occaecat incididunt ea eu dolore sit consequat minim ad ullamco ut ut pariatur velit magna amet et eu tempor sunt ut consequat dolor ut reprehenderit quis dolore esse officia laborum aliqua mollit nostrud minim sint nostrud in do nostrud dolore dolore voluptate anim magna proident sed dolore aute dolore ut veniam consequat nulla mollit reprehenderit laborum aliqua est ea sed.</div>
-      </div>
-      <div id="section2" >
-        <h1>SANTE</h1>
-        <p>Lorem ipsum consequat exercitation labore minim labore in pariatur eiusmod consectetur est id pariatur pariatur ea.</p>
-        <img src="cfs.png" alt="">
-         <div class="desc">Incididunt minim adipisicing cillum deserunt in consectetur dolore duis enim proident incididunt tempor occaecat nulla dolor culpa ut culpa non ea ut et id dolor ut in aliqua voluptate aliqua id voluptate non elit pariatur elit ex cupidatat cupidatat sint et eu tempor sunt ut consequat dolor ut reprehenderit quis dolore esse officia laborum aliqua mollit nostrud minim sint nostrud in do nostrud dolore dolore voluptate anim magna proident sed dolore aute dolore ut veniam consequat nulla mollit reprehenderit laborum aliqua est ea sed.</div>
-      </div>
-      <div id="section3" >
-        <h1>PROTECTION</h1>
-        <p>Ullamco id est duis aliquip anim deserunt commodo in.</p>
-        <img src="cfs.png" alt="">
-         <div class="desc">Incididunt minim adipisicing cillum deserunt in consectetur dolore duis enim proident incididunt tempor occaecat nulla dolor culpa ut culpa non ea ut et id dolor ut in aliqua voluptate aliqua id voluptate non elit pariatur elit ex cupidatat cupidatat sint cillum ullamco labore deserunt dolor eiusmod non cupidatat in proident ullamco sit proident culpa sunt non fugiat quis ut laboris aliqua incididunt ad in nulla aliquip laboris cupidatat eu dolor ut adipisicing nulla exercitation exercitation ullamco culpa consectetur ex sunt consectetur ea occaecat magna duis dolor aliquip cillum consequat minim in tempor in ullamco esse sint sint sint eiusmod velit sint qui  est ea sed.</div>
-      </div>
-
-      <div id="section4">
-        <h1>MOYENS D'EXISTENCE</h1>
-        <p>Quis voluptate nostrud cupidatat anim esse quis eu cupidatat.</p>
-        <img src="cfs.png" alt="">
-         <div class="desc">Lorem ipsum pariatur sint aute dolore anim in do consectetur sit incididunt eu dolor aliqua commodo enim sit est nisi duis tempor ex fugiat mollit ullamco.Lorem ipsum pariatur sint aute dolore anim in do consectetur sit incididunt eu dolor aliqua commodo enim sit est nisi duis tempor ex fugiat mollit ullamco.</div>
-      </div>
-      <div class="clearfix"></div>
-    </div>
-  </div>
-</div>
-
-</body>
-    <!--
-    <body>
-    	<nav class="navbar navbar-default navbar-fixed-top">
-		  <div class="container">
-			<div class="col-md-3">
-				<h5>Proident nisi minim.</h5>
-				<h4>1234567</h4>
+	<body>
+		<div class="container">
+			<div class="row">
+				<h1>Cupidatat velit veniam deserunt dolor ea commodo.</h1>
+				<div class="col-md-6">
+					<p class="description">
+						Ut occaecat ex minim exercitation in reprehenderit aliqua dolore labore excepteur laboris nostrud incididunt do dolore laborum labore amet dolore consectetur aute quis nulla do reprehenderit aliquip non est cupidatat minim ullamco minim nostrud anim quis aliqua dolor dolore labore aliquip elit sunt non exercitation et aliquip non do sed ex eiusmod et eu dolor duis elit sunt non exercitation et aliquip non do sed ex eiusmod et eu dolor duis elit sunt non exercitation et aliquip non do sed ex eiusmod et eu dolor duis.
+						Ut occaecat ex minim exercitation in reprehenderit aliqua dolore labore excepteur laboris nostrud incididunt do dolore laborum labore amet dolore consectetur aute quis nulla do reprehenderit aliquip non est cupidatat minim ullamco minim nostrud anim quis aliqua dolor dolore labore aliquip elit sunt non exercitation et aliquip non do sed ex eiusmod et eu dolor duis elit sunt non exercitation et aliquip non do sed ex eiusmod et eu dolor duis elit sunt non exercitation et aliquip non do sed ex eiusmod et eu dolor duis.
+					</p>
+				</div>
+				<div class="col-md-6">
+					<img class="img-responsive center-block carte" src="sene.png" alt="">
+				</div>
 			</div>
-			<div class="col-md-3">
-				<h5>Dolore proident</h5>
-				<h4>1234567</h4>
+			<hr>
+			<div class="row">
+				<div class="col-md-3">
+					<h4>1234567</h4>
+					<h6>Ut irure deserunt irure.</h6>
+				</div>
+				<div class="col-md-3">
+					<h4>1234567</h4>
+					<h6>Ut irure deserunt irure.</h6>
+				</div>
+				<div class="col-md-3">
+					<h4>1234567</h4>
+					<h6>Ut irure deserunt irure.</h6>
+				</div>
+				<div class="col-md-3">
+					<h4>1234567</h4>
+					<h6>Ut irure deserunt irure.</h6>
+				</div>
 			</div>
-			<div class="col-md-3">
-				<h5>Aliqua culpa.</h5>
-				<h4>1234567</h4>
+			<br>
+			<div class="row">
+				<div class="col-md-3">
+					<h2>Education</h2>
+					<img src="bars.png" alt="" class="img-responsive bars">
+				</div>
+				<div class="col-md-3">
+					<h2>Protection</h2>
+					<img src="bars.png" alt="" class="img-responsive bars">
+				</div>
+				<div class="col-md-3">
+					<h2>Santé</h2>
+					<img src="bars.png" alt="" class="img-responsive bars">
+				</div>
+				<div class="col-md-3">
+					<h2>Moyens d'existence</h2>
+					<img src="bars.png" alt="" class="img-responsive bars">
+				</div>
 			</div>
-			<div class="col-md-3">
-				<h5>Lorem ipsum</h5>
-				<h4>1234567</h4>
-			</div>
-		  </div>
-		</nav>
-         <div class="container">
-			
-        </div> -->
-        <script src="javascript/site.js"></script>
-        <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID.
-         <script>
- 		</script> -->
-    </body>
+		</div>
+	</body>
 </html>
