--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="utf-8">
         <title>HDX | Childfund Senegal</title>
-	    <!-- <link rel="stylesheet" href="css/bootstrap.min.css"> -->
-	    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+	    <link rel="stylesheet" href="css/bootstrap.min.css">
 	    <link rel="stylesheet" type="text/css" href="css/dc.css" />
 	    <link rel="stylesheet" type="text/css" href="css/c3.css" />
-	    <link rel="stylesheet" type="text/css" href="css/site.css" />
 	    <link rel="stylesheet" type="text/css" href="css/leaflet.css" />
-	    <!-- <script src="javascript/jquery.js"></script> -->
+	    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet">
+	    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+	    <script src="javascript/jquery.js"></script>
 	    <script src="javascript/d3.min.js"></script>
 	    <script src="javascript/c3.min.js"></script>
 	    <script src="javascript/d3.tip.min.js"></script>
@@ -17,63 +17,53 @@
 	    <script src="javascript/dc.js"></script>
 	    <script src="javascript/leaflet.js"></script>
 	    <script src="javascript/dc.leaflet.js"></script>
-	    <!-- <script src="javascript/bootstrap.min.js"></script> -->
-	    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-	    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+	    <script src="javascript/bootstrap.min.js"></script>
+	   	<link rel="stylesheet" type="text/css" href="css/site.css" />
     </head>
 	<body>
 		<div class="container">
 			<div class="row">
-				<h1>Cupidatat velit veniam deserunt dolor ea commodo.</h1>
-				<div class="col-md-6">
-					<p class="description">
-						Ut occaecat ex minim exercitation in reprehenderit aliqua dolore labore excepteur laboris nostrud incididunt do dolore laborum labore amet dolore consectetur aute quis nulla do reprehenderit aliquip non est cupidatat minim ullamco minim nostrud anim quis aliqua dolor dolore labore aliquip elit sunt non exercitation et aliquip non do sed ex eiusmod et eu dolor duis elit sunt non exercitation et aliquip non do sed ex eiusmod et eu dolor duis elit sunt non exercitation et aliquip non do sed ex eiusmod et eu dolor duis.
-						Ut occaecat ex minim exercitation in reprehenderit aliqua dolore labore excepteur laboris nostrud incididunt do dolore laborum labore amet dolore consectetur aute quis nulla do reprehenderit aliquip non est cupidatat minim ullamco minim nostrud anim quis aliqua dolor dolore labore aliquip elit sunt non exercitation et aliquip non do sed ex eiusmod et eu dolor duis elit sunt non exercitation et aliquip non do sed ex eiusmod et eu dolor duis elit sunt non exercitation et aliquip non do sed ex eiusmod et eu dolor duis.
-					</p>
+				<h2>ChildFund Sénégal : Réalisations multisectorielles</h2>
+				<div class="description">
+					<p>Ut occaecat ex minim exercitation in reprehenderit aliqua dolore labore excepteur laboris nostrud incididunt do dolore laborum labore amet dolore consectetur aute quis nulla do reprehenderit aliquip non est cupidatat minim ullamco minim nostrud anim quis aliqua dolor dolore labore aliquip elit sunt non exercitation et aliquip non do sed ex eiusmod et eu dolor duis elit sunt non exercitation et aliquip non do sed ex eiusmod et eu dolor duis elit sunt non exercitation et aliquip non do sed ex eiusmod et eu dolor duis.</p>
 				</div>
-				<div class="col-md-6">
+			</div><!-- row -->
+			<hr>
+			<div class="col-md-8">
+				<div class="row">
+					<div class="col-sm-6">
+						<h2>Education</h2>
+						<div id="education"></div>
+					</div>
+					<div class="col-sm-6">
+						<h2>Moyens d'existence</h2>
+						<div id="mExistence"></div>
+					</div>
+					<div class="col-sm-6">
+						<h2>Santé/Nutrition</h2>
+						<div id="sante"></div>
+					</div>
+					<div class="col-sm-6">
+						<h2>Protection</h2>
+						<div id="protection"></div>
+					</div>
+				</div> <!-- row -->
+			</div><!-- col-md-8 -->
+			<div class="col-md-4">
+				<div class="row">
+					<h2>Chiffres clés</h2>
+					<div class="keyFigures"></div>
+				</div>
+				<div class="clearfix"></div>
+				<div class="row mapSection">
+					<h2>Présence de Childfund Sénégal</h2>
 					<img class="img-responsive center-block carte" src="sene.png" alt="">
 				</div>
-			</div>
-			<hr>
-			<div class="row">
-				<div class="col-md-3">
-					<h4>1234567</h4>
-					<h6>Ut irure deserunt irure.</h6>
+				<div class="row">
+					<p class="small">Télécharger les donnees sur HDX | Powered By HDX</p>
 				</div>
-				<div class="col-md-3">
-					<h4>1234567</h4>
-					<h6>Ut irure deserunt irure.</h6>
-				</div>
-				<div class="col-md-3">
-					<h4>1234567</h4>
-					<h6>Ut irure deserunt irure.</h6>
-				</div>
-				<div class="col-md-3">
-					<h4>1234567</h4>
-					<h6>Ut irure deserunt irure.</h6>
-				</div>
-			</div>
-			<br>
-			<div class="row">
-				<div class="col-md-3">
-					<h2>Education</h2>
-					<img src="bars.png" alt="" class="img-responsive bars">
-				</div>
-				<div class="col-md-3">
-					<h2>Protection</h2>
-					<img src="bars.png" alt="" class="img-responsive bars">
-				</div>
-				<div class="col-md-3">
-					<h2>Santé</h2>
-					<img src="bars.png" alt="" class="img-responsive bars">
-				</div>
-				<div class="col-md-3">
-					<h2>Moyens d'existence</h2>
-					<img src="bars.png" alt="" class="img-responsive bars">
-				</div>
-			</div>
-		</div>
+			</div><!-- col-md-4 -->
+		</div> <!-- container -->
+		<script src="javascript/site.js" ></script>
 	</body>
 </html>
