--- a/index.html
+++ b/index.html
@@ -31,21 +31,49 @@
 			<hr>
 			<div class="col-md-8">
 				<div class="row">
-					<div class="col-sm-6">
-						<h2>Education</h2>
-						<div id="education"></div>
-					</div>
-					<div class="col-sm-6">
+					<div class="col-md-6">
+                        <h2>Education</h2>
+                        <div class="col-md-12">
+                            <h6>Structures</h6>
+						    <div id="educationS"></div>
+                        </div>
+                        <div class="col-md-12">
+                            <h6>Bénéficiaires</h6>
+						    <div id="educationB"></div>
+                        </div>
+					</div><!--col-sm-6-->
+					<div class="col-md-6">
 						<h2>Moyens d'existence</h2>
-						<div id="mExistence"></div>
+						<div class="col-md-12">
+                            <h6>Structures</h6>
+						    <div id="mExistenceS"></div>
+                        </div>
+                        <div class="col-md-12">
+                            <h6>Bénéficiaires</h6>
+						    <div id="mExistenceB"></div>
+                        </div>
 					</div>
-					<div class="col-sm-6">
-						<h2>Santé/Nutrition</h2>
-						<div id="sante"></div>
-					</div>
-					<div class="col-sm-6">
+					<div class="col-md-6">
 						<h2>Protection</h2>
-						<div id="protection"></div>
+						<div class="col-md-12">
+                            <h6>Structures</h6>
+						    <div id="protectionS"></div>
+                        </div>
+                        <div class="col-md-12">
+                            <h6>Bénéficiaires</h6>
+						    <div id="protectionB"></div>
+                        </div>
+					</div>
+					<div class="col-md-6">
+						<h2>Santé/Nutrition</h2>
+						<div class="col-md-12">
+                            <h6>Structures</h6>
+						    <div id="santeS"></div>
+                        </div>
+                        <div class="col-md-12">
+                            <h6>Bénéficiaires</h6>
+						    <div id="santeB"></div>
+                        </div>
 					</div>
 				</div> <!-- row -->
 			</div><!-- col-md-8 -->
