--- a/index.html
+++ b/index.html
@@ -22,11 +22,9 @@
     </head>
 	<body>
 		<div class="container">
-			<div class="row">
-				<h2>ChildFund Sénégal : Réalisations multisectorielles</h2>
-				<div class="description">
-					<p>Ut occaecat ex minim exercitation in reprehenderit aliqua dolore labore excepteur laboris nostrud incididunt do dolore laborum labore amet dolore consectetur aute quis nulla do reprehenderit aliquip non est cupidatat minim ullamco minim nostrud anim quis aliqua dolor dolore labore aliquip elit sunt non exercitation et aliquip non do sed ex eiusmod et eu dolor duis elit sunt non exercitation et aliquip non do sed ex eiusmod et eu dolor duis elit sunt non exercitation et aliquip non do sed ex eiusmod et eu dolor duis.</p>
-				</div>
+			<div class="row" id="description-text">
+				<h2></h2>
+				<p></p>
 			</div><!-- row -->
 			<hr>
 			<div class="col-md-8">
