--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 	   	<link rel="stylesheet" type="text/css" href="css/site.css" />
     </head>
 	<body>
+    	<div class="loader" id="loader"></div>
 		<div class="container">
 			<div class="row" id="description-text">
 				<h2></h2>
