map color scale and minor other customs

--- a/index.html
+++ b/index.html
@@ -34,44 +34,36 @@
 					<div class="col-md-6">
                         <h2>EDUCATION</h2>
                         <div class="col-md-12">
-                            <h6>Structures</h6>
 						    <div id="educationS"></div>
                         </div>
                         <div class="col-md-12">
-                            <h6>Bénéficiaires</h6>
 						    <div id="educationB"></div>
                         </div>
 					</div><!--col-sm-6-->
 					<div class="col-md-6">
 						<h2>MOYENS D'EXISTENCE</h2>
 						<div class="col-md-12">
-                            <h6>Structures</h6>
 						    <div id="mExistenceS"></div>
                         </div>
                         <div class="col-md-12">
-                            <h6>Bénéficiaires</h6>
 						    <div id="mExistenceB"></div>
                         </div>
 					</div>
 					<div class="col-md-6">
 						<h2>PROTECTION</h2>
 						<div class="col-md-12">
-                            <h6>Structures</h6>
 						    <div id="protectionS"></div>
                         </div>
                         <div class="col-md-12">
-                            <h6>Bénéficiaires</h6>
 						    <div id="protectionB"></div>
                         </div>
 					</div>
 					<div class="col-md-6">
 						<h2>SANTE/NUTRITION</h2>
 						<div class="col-md-12">
-                            <h6>Structures</h6>
 						    <div id="santeS"></div>
                         </div>
                         <div class="col-md-12">
-                            <h6>Bénéficiaires</h6>
 						    <div id="santeB"></div>
                         </div>
 					</div>
@@ -89,6 +81,7 @@
 					<div class="col-sm-12">
 						<h2>Présence de Childfund Sénégal</h2>
 						<div id="map"></div>
+						<p class="small">Les frontières indiquées et les désignations utilisées sur cette carte n'impliquent pas l'approbation des Nations Unies.</p>
 					</div>
 				</div>
 <!-- 				<div class="row">
