sizes adjuste final

--- a/index.html
+++ b/index.html
@@ -33,37 +33,37 @@
 				<div class="row">
 					<div class="col-md-6">
                         <h2>EDUCATION</h2>
-                        <div class="col-md-12">
+                        <div class="col-sm-12">
 						    <div id="educationS"></div>
                         </div>
-                        <div class="col-md-12">
+                        <div class="col-sm-12">
 						    <div id="educationB"></div>
                         </div>
 					</div><!--col-sm-6-->
 					<div class="col-md-6">
 						<h2>SANTE/NUTRITION</h2>
-						<div class="col-md-12">
+						<div class="col-sm-12">
 						    <div id="santeS"></div>
                         </div>
-                        <div class="col-md-12">
+                        <div class="col-sm-12">
 						    <div id="santeB"></div>
                         </div>
 					</div>
 					<div class="col-md-6">
 						<h2>MOYENS D'EXISTENCE</h2>
-						<div class="col-md-12">
+						<div class="col-sm-12">
 						    <div id="mExistenceS"></div>
                         </div>
-                        <div class="col-md-12">
+                        <div class="col-sm-12">
 						    <div id="mExistenceB"></div>
                         </div>
 					</div>
 					<div class="col-md-6">
 						<h2>PROTECTION</h2>
-						<div class="col-md-12">
+						<div class="col-sm-12">
 						    <div id="protectionS"></div>
                         </div>
-                        <div class="col-md-12">
+                        <div class="col-sm-12">
 						    <div id="protectionB"></div>
                         </div>
 					</div>
@@ -71,7 +71,7 @@
 			</div><!-- col-md-8 -->
 			<div class="col-md-4">
 				<div class="row">
-					<div class="col-m-12">
+					<div class="col-sm-12">
 						<h2>CHIFFRES CLES</h2>
 						<div class="keyFigures"></div>
 					</div>
